reorganised file structure + fixed header alignment

--- a/src/components/landing-page/landing-page.css
+++ b/src/components/landing-page/landing-page.css
@@ -1,3 +1,6 @@
+/*
+Importing font
+*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
 :root {
   --background: hsl(235, 10%, 21%);
@@ -17,15 +20,16 @@ h1 {
 }
 h2 {
   font-weight: var(--sub-heading-weight);
+  width: 100%;
+  flex-basis: 100%;
+  height: 0;
+  margin: 0;
+  border: 0;
 }
 
 h1,
 h2 {
   color: var(--header-colour);
-}
-
-#headers {
-  height: 90vh;
 }
 
 #headers {
@@ -35,8 +39,5 @@ h2 {
   flex-wrap: wrap;
   margin: 1rem 1rem 0 10rem;
   column-gap: 0;
-}
-.break {
-  flex-basis: 100%;
-  height: 0;
+  height: 80vh;
 }
